--- a/IntegratorProject/AuthGuard/AuthGuard.csproj
+++ b/IntegratorProject/AuthGuard/AuthGuard.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Duende.IdentityServer.EntityFramework.Storage" Version="7.0.8" />
     <PackageReference Include="Duende.IdentityServer.Storage" Version="7.0.8" />
     <PackageReference Include="IdentityModel" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
   </ItemGroup>
 
