--- a/src/PlayerHub.API/appsettings.Development.json
+++ b/src/PlayerHub.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbConnection": "Data Source=.;Initial Catalog=PlayerHubDb;Persist Security Info=True;TrustServerCertificate=True;uid=sa;pwd=Moster16@"
+    "AppDbConnection": "Data Source=.;Initial Catalog=PlayerHubDb;Persist Security Info=True;TrustServerCertificate=True;uid=user;pwd=password"
   },
   "Jwt": {
     "Issuer": "https://localhost:7255",
