--- a/src/PlayerHub.API/appsettings.Development.json
+++ b/src/PlayerHub.API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbConnection": "Data Source=.;Initial Catalog=PlayerHubDb;Persist Security Info=True;TrustServerCertificate=True;uid=user;pwd=password",
-    "IdentityAuthGuardDbConnection": "Data Source=.;Initial Catalog=IdentityAuthGuardDb;Persist Security Info=True;TrustServerCertificate=True;uid=user;pwd=password"
+    "AppDbConnection": "Data Source=.;Initial Catalog=PlayerHubDb;Persist Security Info=True;TrustServerCertificate=True;uid=sa;pwd=Moster16@",
+    "IdentityAuthGuardDbConnection": "Data Source=.;Initial Catalog=IdentityAuthGuardDb;Persist Security Info=True;TrustServerCertificate=True;uid=sa;pwd=Moster16@"
   },
   "Jwt": {
     "Issuer": "https://localhost:7255",
